--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "dokto",
+  "name": "MedicaEquip",
   "type": "module",
   "version": "1.4.0",
   "private": true,
   "author": {
-    "name": "cssninjaStudio <hello@cssninja.io> (https://cssninja.io)"
+    "name": "sergei krk <kryukovs@gmail.com> (https://kryukovs.ru)"
   },
   "engines": {
     "node": ">=18",
@@ -22,11 +22,14 @@
     "@alpinejs/intersect": "3.13.10",
     "@alpinejs/persist": "3.13.10",
     "@astrojs/tailwind": "5.1.0",
-    "iconify-icon": "^2.0.0",
+    "@preline/tabs": "^2.6.0",
     "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "0.5.12",
     "alpinejs": "3.13.10",
     "astro": "4.7.0",
+    "iconify-icon": "^2.0.0",
+    "preline": "^2.6.0",
     "swiper": "11.1.1",
     "tailwindcss": "3.4.3"
   },
